fix: realigned elements with padding

--- a/client/src/components/shared/Navbar.module.css
+++ b/client/src/components/shared/Navbar.module.css
@@ -6,8 +6,8 @@
 }
 
 .navPage {
-    padding: 10px 167px;
-    height: 11vh;
+    padding: 0px 150px;
+    height: 12vh;
     width: 100vw;
     display: flex;
     border-bottom: 1px solid var(--grey100);
@@ -24,16 +24,16 @@ li {
 
 .rightContainer li p, 
 .leftContainer li p {
+    padding-top: 10px;
     font-size: var(--font-size-xl);
     font-weight: 700;  
 }
 
 .rightContainer {
     margin-left: auto;
-    
-    
+       
 }
 
 .searchIcon {
-    padding: 10px;
+    padding: 15px;
 }
